# tp_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_wolfram.py
config/: system_prompt.txt  tp_agent_config.json
examples/: problem_parametric_whittaker_hill.md  problem_qft_vacuum_polarization.md  problem_quantum.md  problem_sho.md  quantum_example.py  run_problem.py  run_problem_with_save.py  sho_example.py
outputs/: problem_quantum_20250921_234602.json  problem_quantum_20250922_153041.json  problem_quantum_20250922_154339.json  problem_quantum_gpt-4o_20250922_155953.json  problem_quantum_gpt-4o_20250922_172110.json  problem_quantum_gpt-5_20250922_160506.json  problem_quantum_gpt-5_20250922_165956.json  problem_quantum_gpt-5_20250922_171635.json  problem_quantum_gpt-5_20250922_172225.json  problem_quantum_gpt-5_20250922_181420.json  problem_sho_gpt-5_20250922_182108.json  problem_sho_gpt-5_20250923_174016.json  problem_sho_gpt-5_20250923_174952.json  quantum_demo_20250921_234631.json
scripts/: setup_wolfram.py
tests/: test_agent.py
tp_agent/: __init__.py  config.py  host.py  llm_interface.py  problem_io.py  prompts.py  tools.py
tp_agent/core/: __init__.py  host.py  llm_interface.py
tp_agent/executors/: __init__.py  tools.py  wolfram_manager.py
tp_agent/utils/: __init__.py  config.py  prompts.py
